--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": " 4.3.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "prettier": "^3.3.3",
+    "prettier-eslint": "^16.3.0",
     "typescript": "^5.6.2",
     "vite": "^5.4.5"
   }
