--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.13.0",
+    "@visactor/vchart": "^1.12.5",
+    "clsx": "^2.1.1",
     "events": "^3.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
