--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "events": "^3.3.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.9",
+    "@types/ramda": "^0.30.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -27,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
+    "ramda": "^0.30.1",
     "typescript": "^5.6.2",
     "vite": "^5.4.5"
   }
